Implement login and registration system with UI updates
- Changed startup URI in App.xaml to LoginWindow.
- Added Material Design resources for enhanced UI.
- Updated BudgetManager.csproj to include new packages and icons.
- Made Password property public in User model.
- Removed ListBox from MainWindow.xaml and updated its code-behind.
- Created UsersController to manage user data.
- Added LoginWindow and RegisterWindow with respective logic.
- Implemented MessageWindow for user notifications.

--- a/BudgetManager/Views/MainWindow.xaml
+++ b/BudgetManager/Views/MainWindow.xaml
@@ -5,8 +5,9 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BudgetManager"
         mc:Ignorable="d"
+        Style="{StaticResource MaterialDesignWindow}"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-
+        <ListBox x:Name="UserList"></ListBox>
     </Grid>
 </Window>
